[package]
name = "sptty"
version = "0.1.0"
edition = "2018"
description = "A Lightweight Spotify client for Linux."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
base64 = "0.13.0"
rand = "0.8.4"
ring = "0.16.20"
serde_json = "1.0.64"
clap = "3.0.0-beta.2"
opener = "0.5.0"
dirs = "4.0.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
reqwest = "0.11.4"
toml = "0.5.8"

[dependencies.librespot]
version = "0.2.0"
features = ["pulseaudio-backend"]
default-features = false

[dependencies.serde]
version = "1.0.126"
features = ["derive"]

[dependencies.tokio]
version = "1.11.0"
features = ["rt", "net", "fs", "sync", "process", "macros"]

[dependencies.hyper]
version = "0.14.13"
features = ["server", "http1", "http2"]
