[package]
name = "sptty"
version = "0.1.0"
edition = "2018"
description = "A Lightweight Spotify client for Linux."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.13"
rand = "0.8"
ring = "0.16"
serde_json = "1.0"
opener = "0.5"
dirs = "4.0"
log = "0.4"
pretty_env_logger = "0.4"
reqwest = "0.11"
toml = "0.5"

[dependencies.librespot]
version = "0.3"
features = ["pulseaudio-backend"]
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.20"
features = ["rt", "net", "fs", "sync", "process", "macros"]

[dependencies.hyper]
version = "0.14"
features = ["server", "http1", "http2"]

[dependencies.clap]
version = "3.0"
features = [ "derive", "cargo" ]
